# 2026-youth-ai-project

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
archive/: .env.example  AI_커리큘럼_개괄자료.md  README.md  pyproject.toml
archive/.devcontainer/: devcontainer.json  post-create.sh
archive/session-04-ai-basics/: README.md
archive/session-04-ai-basics/notebooks/: embedding_guide.ipynb  microgpt-tutorial.ipynb  prompt_engineering_guide.ipynb  tokenizer_tutorial.ipynb
archive/session-04-ai-basics/slides/: embedding.pptx
archive/session-05-ai-programming/notebooks/: openai_workshop.ipynb
assets/: apim-openai-test.ipynb  apim-setup-guide.md
session-04/: embedding_guide.ipynb  microgpt-tutorial.ipynb
session-04-ai-basics/notebooks/: microgpt-architecture.md
session-04-ai-basics/slides/: 4회차-AI기초이론.pptx
session-05/: README.md  chatbot_template.py  openai_workshop.ipynb
session-06/: 01_function_calling_agent.ipynb  README.md  semantle_template.py
session-07/: README.md  practice-07.ipynb  school_helper_template.py  session7_main.ipynb  session7_quiz1.ipynb  session7_quiz2.ipynb  session7_quiz3.ipynb
setup-apim/: .env.sample  apim-architecture-guide.md  apim-policy.xml  apim-setup-guide.md  apim-test.ipynb
utils/: __init__.py  config.py
