[project]
name = "maf-ai-class-2026"
version = "0.1.0"
description = "MAF AI 클래스 2026"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.30.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "gradio>=4.0.0",
    "chromadb>=0.5.0",
    "tiktoken",
    "matplotlib",
    "pandas",
    "numpy",
    "requests",
    "beautifulsoup4",
    "python-dotenv",
    "ipywidgets",
    "ipykernel>=6.0",
    "scikit-learn",
    "agent-framework>=1.2.0",
    "pydantic>=2.0",
]
